--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,27 @@ body{
     position: absolute;
     left: 50%;
     transform: translatex(-50%);
+    margin-top: 15px;
+}
+
+header{
+    border: 1px solid #e3f2fd;
+    margin-top: 50px;
 }
 
 #testimonial{
-    background: #f1f1f1;
+    background:  #e3f2fd;
     padding: 50px 0 30px 0;
     text-align: center;
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+#info-one{
+    border: 1px solid#e3f2fd;
+    padding-top: 50px ;
+}
+
+footer{
+    background: url(../img/smartphones.png);
 }
