cambio de imagenes y botones

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ header {
 
 footer{
     color: #e3f2fd;
-    background: url(../img-nc/work-731198_960_720.webp) no-repeat;
+    background: url(../img-nc/smartphone-5692533_1920.jpg) no-repeat;
     align-items: center;
 }
 
