--- a/css/main.css
+++ b/css/main.css
@@ -33,8 +33,8 @@ header {
 }
 
 
-#testimonial{
-    background:  #e3f2fd;
+#services{
+    background:  white;
     padding: 50px 0 30px 0;
     text-align: center;
     margin-top: 40px;
@@ -44,6 +44,7 @@ header {
 #info-one{
     border: 1px solid#e3f2fd;
     padding-top: 50px ;
+    padding-bottom: 50px;
 }
 
 footer{
@@ -56,7 +57,233 @@ footer{
     margin-top: 15px;
 }
 
+#contact p{
+    color: #e3f2fd;
+}
+
+/*Services css*/
+
+.pt-100 {
+	padding-top: 100px;
+}
+.pb-100 {
+	padding-bottom: 100px;
+}
+.services-area {
+  background-color: #f6f6f6;
+}
+.section-title {
+  margin-bottom: 60px;
+}
+.section-title p {
+	color: #777;
+	font-size: 16px;
+}
+.section-title h4 {
+	text-transform: capitalize;
+	font-size: 40px;
+	position: relative;
+	padding-bottom: 20px;
+	margin-bottom: 20px;
+	font-weight: 600;
+}
+.section-title h4:before {
+	position: absolute;
+	content: "";
+	width: 60px;
+	height: 2px;
+	background-color: #17a2b8;
+	bottom: 0;
+	left: 50%;
+	margin-left: -30px;
+}
+.section-title h4:after {
+	position: absolute;
+	background-color: #17a2b8;
+	content: "";
+	width: 10px;
+	height: 10px;
+	bottom: -4px;
+	left: 50%;
+	margin-left: -5px;
+	border-radius: 50%;
+}
+.single-service {
+	border: 1px solid #17a2b8;
+	padding: 30px 10px;
+	position: relative;
+	text-align: center;
+	margin-bottom: 30px;
+}
+.single-service i.fa {
+  width: 60px;
+  height: 60px;
+  background-color: #17a2b8;
+  font-size: 25px;
+  color: white;
+  line-height: 60px;
+  text-align:center;
+  margin-bottom:20px;
+}
+.single-service i.fa {
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+.single-service:hover i.fa {
+	border-radius: 50%;
+}
+.single-service h4 {
+	text-transform: capitalize;
+	font-size: 22px;
+	margin-bottom: 10px;
+	font-weight: 500;
+}
 
 
+
+/*Footer info*/
+
+.context-dark, .bg-gray-dark, .bg-primary {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.footer-classic a, .footer-classic a:focus, .footer-classic a:active {
+  color: #ffffff;
+}
+.nav-list li {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.nav-list li a:hover:before {
+  margin-left: 0;
+  opacity: 1;
+  visibility: visible;
+}
+
+ul, ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 23px;
+  font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.5);
+}
+.social-container .col {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.nav-list li a:before {
+  content: "\f14f";
+  font: 400 21px/1 "Material Design Icons";
+  color: #4d6de6;
+  display: inline-block;
+  vertical-align: baseline;
+  margin-left: -28px;
+  margin-right: 7px;
+  opacity: 0;
+  visibility: hidden;
+  transition: .22s ease;
+}
+
+/*Footer social*/
+
+#cont {
+  background-color: #002147;
+  padding: 25px;
+  color: #ecf0f1;
+}
+
+.middle {
+  text-align: center;
+}
+
+.btn2 {
+display: inline-block;
+width: 50px;
+height: 50px;
+background: #f1f1f1;
+margin: 10px;
+border-radius: 30%;
+box-shadow: 0 5px 15px -5px #ecf0f1;
+color: #3498db;
+overflow: hidden;
+position: relative;
+}
+
+a.btn2:hover {
+transform: scale(1.3);
+color: #f1f1f1;
+}
+
+.btn2 i {
+line-height: 50px;
+font-size: 20px;
+transition: 0.2s linear;
+}
+
+.btn2:hover i {
+transform: scale(1.3);
+color: #f1f1f1;
+}
+
+.fa-facebook-f {
+  color: #3c5a99;
+}
+
+.fa-twitter {
+  color: #1da1f2;
+}
+
+.fa-instagram {
+  color: #e1306c;
+}
+
+.fa-google {
+  color: #dd4b39;
+}
+
+.fa-youtube {
+  color: #ff0000;
+}
+
+.btn2::before {
+content: "";
+position: absolute;
+width: 120%;
+height: 120%;
+background: #3498db;
+transform: rotate(45deg);
+left: -110%;
+top: 90%;
+}
+
+.btn2:hover::before {
+animation: aaa 0.7s 1;
+top: -10%;
+left: -10%;
+}
+
+@keyframes aaa {
+0% {
+  left: -110%;
+  top: 90%;
+}
+50% {
+  left: 10%;
+  top: -30%;
+}
+100% {
+  left: -10%;
+  top: -10%;
+}
+}
 
 
