--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,36 @@ header {
     padding-bottom: 50px;
 }
 
+.info-left i.fab{
+  font-size: 55px;
+  text-align:center;
+  padding-left: 10px;
+}
+
+.info-left i.fa-html5{
+  color:#e34c26;
+}
+
+.info-left i.fa-css3-alt{
+  color:#264de4;
+}
+
+.info-left i.fa-js-square{
+  color:#f0db4f;
+}
+
+.info-left i.fa-bootstrap{
+  color:#0275d8;
+}
+
+.info-left i.fa-git-square{
+  color:#f34f29;
+}
+
+.info-left i.fa-npm{
+  color:#cb3837;
+}
+
 footer{
     color: #e3f2fd;
     background: url(../img-nc/smartphone-5692533_1920.jpg) no-repeat;
@@ -60,6 +90,8 @@ footer{
 #contact p{
     color: #e3f2fd;
 }
+
+
 
 /*Services css*/
 
@@ -197,7 +229,7 @@ ul, ol {
 
 #cont {
   background-color: #002147;
-  padding: 25px;
+  padding: 20px;
   color: #ecf0f1;
 }
 
@@ -242,17 +274,14 @@ color: #f1f1f1;
   color: #1da1f2;
 }
 
-.fa-instagram {
-  color: #e1306c;
+.fa-linkedin-in {
+  color: #007bb5;
 }
 
-.fa-google {
-  color: #dd4b39;
+.fa-github {
+  color: #333;
 }
 
-.fa-youtube {
-  color: #ff0000;
-}
 
 .btn2::before {
 content: "";
